--- a/lw5/easy/index.html
+++ b/lw5/easy/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8"/>
     <title>Profile-page</title>
-    <link rel="stylesheet" href="Css/Styles.css"/>
+    <link rel="stylesheet" href="css/styles.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com"/>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet"/>
   </head>
   <body>
-    <div class="conteiner">
-      <div class="clear-float">
+    <div class="container">
+      <div> 
       <div class="block-image">
         <img src="images/photo.png" alt="Photo of a girl" class="block-image__image"/>
       </div>
@@ -20,37 +20,39 @@
           <cite class="block-quote__author">— Том Демарко. Deadline</cite>
         </blockquote>
       </div>
+      <div class="clear-float"></div>
       </div>
-      <div class="side-bar clear-float">
+      <div class="side-bar">
         <h3 class="side-bar__favourites-author">Любимые писатели:</h3>
-        <ul class="side-bar__list1">
+        <ul class="side-bar__list">
           <li>Айзек Азимов</li>
           <li>Говард Лавкрафт</li>
           <li>Дмитрий Глуховский</li>
           <li>Чак Паланик</li>
         </ul>
         <h3 class="side-bar__favourites-films">Любимые фильмы:</h3>
-        <ol class="side-bar__list2">
+        <ol class="side-bar__list side-bar__list_writers">
           <li>Шоу Трумэна</li>
-          <li>Малхолланд Драйв</li>
-          <li>Семь жизней</li>
-          <li>Гравитация</li>
+          <li class="side-bar__list_string">Малхолланд Драйв</li>
+          <li class="side-bar__list_string">Семь жизней</li>
+          <li class="side-bar__list_string">Гравитация</li>
         </ol>
       </div>
       <article class="content">
         <h1 class="content__name">Jane Doe</h1>
         <img src="images/strip.png" alt="Strip" class="content__strip"/>
-        <p class="content__text1">
+        <p class="content__text_big-indent content__text">
             В 1930-е годы прошлого века физик Джордж Гамоу из университета штата Колорадо начал публиковать <br> мини-сериал рассказов о неком мистере Томпкинсе, 
             банковском клерке средних лет. Мистер Томпкинс, как явствовало из этих историй, интересовался современной наукой. 
         </p>
         <h2 class="content__hobby">Моё хобби</h2>
-        <p class="content__text2">
+        <p class="content__text_small-indent content__text">
             Он регулярно посещал вечерние лекции местного профессора и, разумеется, всегда засыпал на самом интересном месте.<br> 
             А когда просыпался, то обнаруживал себя в каком-нибудь параллельном мире, где один из основных законов физики действовал не так, как в его мире. 
         </p>
-        <p class="content__write-to-me">Напиши мне</p>
+        <p class="content__write-to-me content__write-to-me_arrow">Напиши мне  </p>
       </article>
+      <span class="clear-float"></span>
     </div>
   </body>
 </html>
