--- a/lw6/index.html
+++ b/lw6/index.html
@@ -67,5 +67,56 @@
         <span class="clear-float"></span>
       </div>
     </div>
+    <div class="block-films">
+      <h2 class="love-films">Любимые фильмы</h2>
+      <div class = "films">
+        <div>
+          <img src="../lw6/images/Shawshank-Redemption.png" alt="Shawshank-Redemption" class="films__image"/>
+          <h3 class="name-film">Побег из Шоушенка</h3>
+          <p class="films-text">
+            Успешный банкир Энди Дюфрейн обвинен в убийстве собственной <br>
+            жены и ее любовника. Оказавшись в тюрьме под названием Шоушенк, он сталкивается с жестокостью и беззаконием, 
+            царящими по обе<br> стороны решетки. Каждый, кто попадает в эти стены, становится их рабом до конца жизни. Но Энди, вооруженный живым умом и доброй душой, 
+            отказывается мириться с приговором судьбы и начинает разрабатывать невероятно дерзкий план своего освобождения.
+          </p>
+        </div>
+
+        <div>
+          <img src="../lw6/images/Narcosis.png" alt="Narcosis" class="films__image"/>
+          <h3 class="name-film">Наркоз</h3>
+          <p class="films-text">
+            Клай Бересфорд вынужден лечь под нож. Однако в процессе операции на сердце он неожиданно приходит в<br> себя. Находясь в парализованном состоянии, 
+            будучи не в силах пошевелить ни рукой, ни ногой, он,<br> тем не менее, чувствует каждое<br> касание скальпеля к своей плоти…
+          </p>
+        </div>
+
+        <div>
+          <img src="../lw6/images/Astral.png" alt="Astral" class="films__image"/>
+          <h3 class="name-film">Астрал</h3>
+          <p class="films-text">
+            Джош и Рене переезжают со своими детьми в новый дом, но не успевают толком распаковать вещи, как начинаются странные события. Необъяснимо перемещаются<br> предметы, 
+            в детской звучат странные звуки… Но в настоящий ужас<br> приходят родители, когда их десятилетний сын Далтон впадает в кому. 
+            Все усилия врачей в больнице помочь мальчику безуспешны.
+          </p>
+        </div>
+
+        <div>
+          <img src="../lw6/images/Gravity.png" alt="Gravity" class="films__image"/>
+          <h3 class="name-film">Гравитация</h3>
+          <p class="films-text">
+            Доктор Райан Стоун, блестящий специалист в области медицинского инжиниринга, отправляется в свою первую космическую миссию под командованием ветерана<br> астронавтики 
+            Мэтта Ковальски, для которого этот полет — последний<br> перед отставкой. Но во время,<br> казалось бы, рутинной работы за бортом случается катастрофа.<br> 
+            Шаттл уничтожен, а Стоун и<br> Ковальски остаются совершенно<br> одни; они находятся в связке друг с другом, и все, что они могут, — это двигаться по орбите в 
+            абсолютно черном пространстве без всякой<br> связи с Землей и какой-либо<br> надежды на спасение.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="questionnaire">
+
+    </div>
+    <footer class="footer">
+      
+    </footer>
   </body>
 </html>
