Обновленная версия, но нужно доработать форму

--- a/lw6/index.html
+++ b/lw6/index.html
@@ -111,9 +111,29 @@
           </p>
         </div>
       </div>
+      <div class="block-button">
+        <span class="all-films button-text">
+          Все фильмы
+        </span>
+      </div>
     </div>
     <div class="questionnaire">
+      <span>
 
+      </span>
+      <form>
+        <input type="text"/>
+        <input type="text"/>
+        <select size="1" name="country" placeholder="Россия">
+          <option>USA</option>
+          <option>Canada</option>
+          <option>Russia</option>
+        </select>
+        <label>
+          <input type="radio"/>
+          <input type="radio"/>
+        </label>
+      </form>
     </div>
     <footer class="footer">
       
