--- a/lw6/index.html
+++ b/lw6/index.html
@@ -68,12 +68,12 @@
       </div>
     </div>
     <div class="block-films">
-      <h2 class="love-films">Любимые фильмы</h2>
-      <div class = "films">
+      <h2 class="block-films__love-films">Любимые фильмы</h2>
+      <div class = "block-films__films">
         <div>
-          <img src="../lw6/images/Shawshank-Redemption.png" alt="Shawshank-Redemption" class="films__image"/>
-          <h3 class="name-film">Побег из Шоушенка</h3>
-          <p class="films-text">
+          <img src="../lw6/images/Shawshank-Redemption.png" alt="Shawshank-Redemption" class="block-films__films_image"/>
+          <h3 class="block-films__films_name-film">Побег из Шоушенка</h3>
+          <p class="block-films__films_films-text">
             Успешный банкир Энди Дюфрейн обвинен в убийстве собственной <br>
             жены и ее любовника. Оказавшись в тюрьме под названием Шоушенк, он сталкивается с жестокостью и беззаконием, 
             царящими по обе<br> стороны решетки. Каждый, кто попадает в эти стены, становится их рабом до конца жизни. Но Энди, вооруженный живым умом и доброй душой, 
@@ -82,18 +82,18 @@
         </div>
 
         <div>
-          <img src="../lw6/images/Narcosis.png" alt="Narcosis" class="films__image"/>
-          <h3 class="name-film">Наркоз</h3>
-          <p class="films-text">
+          <img src="../lw6/images/Narcosis.png" alt="Narcosis" class="block-films__films_image"/>
+          <h3 class="block-films__films_name-film">Наркоз</h3>
+          <p class="block-films__films_films-text">
             Клай Бересфорд вынужден лечь под нож. Однако в процессе операции на сердце он неожиданно приходит в<br> себя. Находясь в парализованном состоянии, 
             будучи не в силах пошевелить ни рукой, ни ногой, он,<br> тем не менее, чувствует каждое<br> касание скальпеля к своей плоти…
           </p>
         </div>
 
         <div>
-          <img src="../lw6/images/Astral.png" alt="Astral" class="films__image"/>
-          <h3 class="name-film">Астрал</h3>
-          <p class="films-text">
+          <img src="../lw6/images/Astral.png" alt="Astral" class="block-films__films_image"/>
+          <h3 class="block-films__films_name-film">Астрал</h3>
+          <p class="block-films__films_films-text">
             Джош и Рене переезжают со своими детьми в новый дом, но не успевают толком распаковать вещи, как начинаются странные события. Необъяснимо перемещаются<br> предметы, 
             в детской звучат странные звуки… Но в настоящий ужас<br> приходят родители, когда их десятилетний сын Далтон впадает в кому. 
             Все усилия врачей в больнице помочь мальчику безуспешны.
@@ -101,9 +101,9 @@
         </div>
 
         <div>
-          <img src="../lw6/images/Gravity.png" alt="Gravity" class="films__image"/>
-          <h3 class="name-film">Гравитация</h3>
-          <p class="films-text">
+          <img src="../lw6/images/Gravity.png" alt="Gravity" class="block-films__films_image"/>
+          <h3 class="block-films__films_name-film">Гравитация</h3>
+          <p class="block-films__films_films-text">
             Доктор Райан Стоун, блестящий специалист в области медицинского инжиниринга, отправляется в свою первую космическую миссию под командованием ветерана<br> астронавтики 
             Мэтта Ковальски, для которого этот полет — последний<br> перед отставкой. Но во время,<br> казалось бы, рутинной работы за бортом случается катастрофа.<br> 
             Шаттл уничтожен, а Стоун и<br> Ковальски остаются совершенно<br> одни; они находятся в связке друг с другом, и все, что они могут, — это двигаться по орбите в 
@@ -111,8 +111,8 @@
           </p>
         </div>
       </div>
-      <div class="block-button">
-        <span class="all-films button-text">
+      <div class="block-films__block-button">
+        <span class="block-films__block-button_all-films button-text">
           Все фильмы
         </span>
       </div>
