--- a/lw4/task1/1.html
+++ b/lw4/task1/1.html
@@ -3,7 +3,7 @@
   <head>
     <title>Business card website</title>
     <meta charset="UTF-8">
-    <meta name="description" content="Сайт-визитка">
+    <meta name="description" content="Сайт-визитка обо мне">
     <meta name="keywords" content="Максим, увлечения, информация">
     <meta name="author" content="Прозоров Максим Андреевич">
     <meta name="viewport" content="width=device-width, initial-cale=1">
@@ -40,17 +40,17 @@
         <ol>
           <li>
             <a href="https://vk.com/masya956">
-              <h3>It's My VK</h3>
+              It's My VK
             </a>
           </li>
           <li>
             <a href="https://www.instagram.com/masiaproki/">
-              <h3>Инстаграм</h3>
+              Инстаграм
             </a>
           </li>
           <li>
             <a href="https://ok.ru/profile/577750212035">
-              <h3>Одноклассники</h3>
+              Одноклассники
             </a>
           </li>
         </ol>
